--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,13 @@ html, body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  background: url('background.jpg') no-repeat center center fixed;
+  background: url('cardboard.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
 .title-container {
     position: fixed;
-    top: 30%;   /* Adjust based on your design */
+    top: 35%;   /* Adjust based on your design */
     left: 0;
     right: 0;
     text-align: center;  /* This centers the content horizontally */
@@ -31,7 +31,7 @@ html, body {
     display: inline-block;  /* Only takes up as much space as its content */
     font-size: 3.5rem;
     color: black;
-    font-family: "Shantell Sans";
+    font-family: "Helvetica Neue";
     pointer-events: auto;  /* Enables pointer events on the title itself */
     transition: text-decoration 0.3s ease;
 }
@@ -62,7 +62,7 @@ html, body {
 }
 
 .about-title {
-    font-family: "Shantell Sans";
+    font-family: "Helvetica Neue";
     font-size: 4.5rem;
     color: black;
     padding-top: 0.5em;
@@ -71,7 +71,7 @@ html, body {
 }
 
 .about-text {
-    font-family: "Times New Roman", serif;
+    font-family: "Helvetica Neue", serif;
     font-size: 1.1rem;
     max-width: none;
     margin-bottom: 5em;
@@ -82,7 +82,7 @@ html, body {
 .about-button {
   font-family: 'Helvetica Neue', serif;
   background-color: none;
-  color: black;
+  color: red;
   text-decoration: none;
   border-radius: 10px;
   font-weight: bold;
