--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html, body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  background: url('cardboard.jpg') no-repeat center center fixed;
+  background-color: whitesmoke;
   background-size: cover;
 }
 
@@ -62,7 +62,7 @@ html, body {
 }
 
 .about-title {
-    font-family: "Helvetica Neue";
+    font-family: "Arial";
     font-size: 4.5rem;
     color: black;
     padding-top: 0.5em;
@@ -71,7 +71,7 @@ html, body {
 }
 
 .about-text {
-    font-family: "Helvetica Neue", serif;
+    font-family: "Arial", serif;
     font-size: 1.1rem;
     max-width: none;
     margin-bottom: 5em;
@@ -118,6 +118,12 @@ p {
   line-height: 1.6;
   margin-bottom: 20px;
   text-align: justify;
+  font-family: "Times New Roman", sans-serif;
+}
+
+center {
+  text-align: center; 
+  font-family: "Times New Roman", serif;
 }
 
 img {
