--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #e8e8e8;
+  overflow-x: hidden;
 }
 
 code {
