scenario intro at welcome page and how are you

--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -43,7 +43,7 @@
   font-size: 16px;
   line-height: 1.6;
   margin-bottom: 15px;
-  text-align: center;
+  text-align: justify;
 }
 
 .welcome-form {
